<resources>
    <string name="app_name">DatingApp</string>
    <string name="login">Iniciar Sesión</string>
    <string name="pass">Contraseña</string>
    <string name="email">Correo</string>
    <string name="register">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="save">Guardar Cambios</string>
    <string name="cancel">Cancelar</string>
</resources>